# tunsocks

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am
include/: lwipopts.h
src/: forward_local.c  forward_remote.c  host.c  host.h  libevent.c  main.c  socks.c  socks5.c  tunif.c
